# cpp_serializers_benchmark

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
.github/workflows/: actions.yml
bitsery/: CMakeLists.txt  bitsery.cpp  bitsery_brief_syntax.cpp  bitsery_compatibility.cpp  bitsery_compression.cpp  bitsery_fixed_buffer.cpp  bitsery_flexible_syntax.cpp  bitsery_sstream.cpp  bitsery_unsafe_read.cpp  bitsery_verbose_syntax.cpp
boost/: CMakeLists.txt  boost.cpp
cereal/: CMakeLists.txt  cereal.cpp
flatbuffers/: CMakeLists.txt  flatbuffers.cpp  monster.fbs
hand_written/: CMakeLists.txt  hand_written.cpp  hand_written_no_checking.cpp  hand_written_unsafe.cpp
iostream/: CMakeLists.txt  iostream.cpp
msgpack/: CMakeLists.txt  msgpack.cpp
protobuf/: CMakeLists.txt  monster.proto  protobuf.cpp  protobuf.h  protobuf_arena.cpp
testing_core/: CMakeLists.txt  test.cpp  test.h  types.cpp  types.h  uniform_distributions.h
testing_core/testing/: test.h  types.h
tools/: index.js  package-lock.json  package.json
yas/: CMakeLists.txt  yas.cpp  yas_compression.cpp  yas_sstream.cpp
zpp/: CMakeLists.txt  zpp.cpp
zpp_bits/: CMakeLists.txt  zpp_bits.cpp  zpp_bits_fixed.cpp
